--- a/src/css/cores.scss
+++ b/src/css/cores.scss
@@ -8,6 +8,6 @@
     --clr-orange-light-200: hsl(34, 78%, 91%);
     --clr-branco: hsl(0, 0%, 100%);
     --clr-preto: hsl(0, 0%, 15%);
-    --clr-red-light: #b4180d;
-    --clr-preto-dark: #7d0f08;
+    --clr-red-light: hsl(4, 87%, 38%);
+    --clr-preto-dark: hsl(4, 88%, 26%);
 }
